# Fractal-Art

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  color.cpp  color.hpp  fractalCUDA.cu  fractals.cpp  fractals.hpp  main.cpp  run.bat
lib/: color.hpp  fractals.hpp
src/: color.cpp  fractalCUDA.cu  fractals.cpp  main.cpp
